--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,105 @@
-.App {
+/* Navbar */
+.nav-ul li{
+  display: inline-block;
+  padding: 10px;
+}
+.nav-ul li a{
+  color: #fff;
+  padding: 5px;
+  text-decoration: none;
+}
+.nav-ul{
+  padding: 5px;
+  margin: 0;
+  background-color: skyblue;
+}
+/* Footer */
+.footer{
+  position: absolute;
+  bottom: 0;
   text-align: center;
+  width: 100%;
+  background-color: skyblue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*signup Page */
+.inputBox{
+  display: block;
+  margin: 25px;
+  padding: 7px;
+  width: 300px;
+  border: 1px solid skyblue;
+}
+.register, .product{
+  margin-left: 30%;
+}
+.login{
+  margin-left: 30%;
+  margin-top: 100px;
+}
+.register button{
+  margin:25px;
+  padding: 10px;
+  width: 150px;
+  background-color: skyblue;
+  cursor: pointer;
+  border: 1px solid;
+  border-radius: 5px;
+}
+.login button{
+  margin:25px;
+  padding: 10px;
+  width: 150px;
+  background-color: skyblue;
+  cursor: pointer;
+  border: 1px solid;
+  border-radius: 5px;
+}
+.invalid-input{
+  color: red;
+  margin-top: -20px;
+  display: block;
+  margin-left: 20px;
+}
+.product-list{
+  text-align: center;
+  margin-top:50px;
+}
+.product-list ul li{
+  display: inline-block;
+  border: 1px solid skyblue;
+  padding: 5px;
+  width: 150px;
+}
+.product-list ul{
+  margin: 0;
+}
+
+.search-product-box{
+  width: 400px;
+  margin: 20px;
+  height: 40px;
+  border: 1px solid skyblue;
+  padding-left: 20px;
+}
+.update{
+      text-decoration: none;
+        color: black;
+}
+.list{
+  background-color: skyblue;
+}
+ .appButton{
+  margin:25px;
+  padding: 10px;
+  width: 150px;
+  background-color: skyblue;
+  cursor: pointer;
+  border: 1px solid;
+  border-radius: 5px;
+}
+.nav-right{
+  text-align: right;
 }
 
 @media (prefers-reduced-motion: no-preference) {
